--- a/速递医疗 医生端/StoryBoard/Home.storyboard
+++ b/速递医疗 医生端/StoryBoard/Home.storyboard
@@ -13,7 +13,7 @@
         <!--Home detail-->
         <scene sceneID="VeG-8Q-yVu">
             <objects>
-                <viewController storyboardIdentifier="Detail" id="dEe-b0-evy" customClass="Home_detail" customModule="速递医疗_医生端" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Detail" id="dEe-b0-evy" customClass="Home_detail" customModule="DoctorClient" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1Rv-KH-dw8"/>
                         <viewControllerLayoutGuide type="bottom" id="yNy-gr-MvX"/>
@@ -69,22 +69,22 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="atb-Xu-Wuj">
-                                        <rect key="frame" x="278" y="20" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="278" y="30" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="病情描述：" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ngm-TQ-5dL">
-                                        <rect key="frame" x="20" y="100" width="258" height="18"/>
+                                        <rect key="frame" x="20" y="95" width="258" height="17"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="200" id="fh7-pR-gyr"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="230" id="fh7-pR-gyr"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dKY-fy-GRv">
-                                        <rect key="frame" x="87" y="258" width="115" height="30"/>
+                                        <rect key="frame" x="87" y="232" width="115" height="30"/>
                                         <color key="backgroundColor" red="0.38823529410000002" green="0.68235294120000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="UZX-kl-DIp"/>
@@ -103,7 +103,7 @@
                                         </connections>
                                     </button>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0FD-Js-N82">
-                                        <rect key="frame" x="20" y="138" width="248" height="100"/>
+                                        <rect key="frame" x="20" y="117" width="248" height="100"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="vGu-ju-4OU"/>
@@ -149,13 +149,13 @@
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7os-ky-hQ3">
-                                        <rect key="frame" x="100" y="25" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="100" y="30" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g9S-v0-leh">
-                                        <rect key="frame" x="105.5" y="25" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="105.5" y="30" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -166,25 +166,51 @@
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hlz-fv-XOA">
+                                        <rect key="frame" x="218" y="-5" width="50" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="OV3-zK-C7j"/>
+                                            <constraint firstAttribute="width" constant="50" id="ezs-KF-4oE"/>
+                                        </constraints>
+                                        <state key="normal" title="私信">
+                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="sixin:" destination="dEe-b0-evy" eventType="touchUpInside" id="MV9-hS-vV5"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="ngm-TQ-5dL" firstAttribute="top" secondItem="o36-pi-iw0" secondAttribute="bottom" constant="10" id="2K5-pA-DId"/>
+                                    <constraint firstItem="ngm-TQ-5dL" firstAttribute="top" secondItem="o36-pi-iw0" secondAttribute="bottom" constant="5" id="2K5-pA-DId"/>
                                     <constraint firstItem="ngm-TQ-5dL" firstAttribute="leading" secondItem="1ck-z6-L9z" secondAttribute="leading" constant="20" id="5RZ-Am-EZc"/>
+                                    <constraint firstItem="atb-Xu-Wuj" firstAttribute="baseline" secondItem="g9S-v0-leh" secondAttribute="baseline" id="Abo-HH-MMG"/>
                                     <constraint firstItem="0FD-Js-N82" firstAttribute="leading" secondItem="1ck-z6-L9z" secondAttribute="leading" constant="20" id="BZk-Ee-655"/>
                                     <constraint firstItem="SH2-u4-Srw" firstAttribute="top" secondItem="1ck-z6-L9z" secondAttribute="top" constant="20" id="GyQ-Zu-aBU"/>
-                                    <constraint firstItem="0FD-Js-N82" firstAttribute="top" secondItem="ngm-TQ-5dL" secondAttribute="bottom" constant="20" id="J9z-e0-RTj"/>
+                                    <constraint firstItem="0FD-Js-N82" firstAttribute="top" secondItem="ngm-TQ-5dL" secondAttribute="bottom" constant="5" id="J9z-e0-RTj"/>
                                     <constraint firstItem="7os-ky-hQ3" firstAttribute="leading" secondItem="SH2-u4-Srw" secondAttribute="trailing" constant="20" id="K9z-Wp-XOa"/>
                                     <constraint firstItem="g9S-v0-leh" firstAttribute="baseline" secondItem="7os-ky-hQ3" secondAttribute="baseline" id="LFg-qe-3XY"/>
                                     <constraint firstItem="o36-pi-iw0" firstAttribute="leading" secondItem="1ck-z6-L9z" secondAttribute="leading" constant="20" id="M80-us-rrH"/>
                                     <constraint firstItem="SH2-u4-Srw" firstAttribute="leading" secondItem="1ck-z6-L9z" secondAttribute="leading" constant="20" id="P20-P5-zZd"/>
+                                    <constraint firstItem="Hlz-fv-XOA" firstAttribute="baseline" secondItem="ijJ-sO-R4a" secondAttribute="baseline" id="Z0G-md-fna"/>
+                                    <constraint firstAttribute="trailing" secondItem="Hlz-fv-XOA" secondAttribute="trailing" constant="20" id="aEZ-SD-iRH"/>
                                     <constraint firstItem="ijJ-sO-R4a" firstAttribute="leading" secondItem="SH2-u4-Srw" secondAttribute="trailing" constant="20" id="byR-Fu-7dY"/>
-                                    <constraint firstItem="dKY-fy-GRv" firstAttribute="top" secondItem="ngm-TQ-5dL" secondAttribute="bottom" constant="140" id="cd7-5c-VJ6"/>
+                                    <constraint firstItem="dKY-fy-GRv" firstAttribute="top" secondItem="ngm-TQ-5dL" secondAttribute="bottom" constant="120" id="cd7-5c-VJ6"/>
                                     <constraint firstItem="g9S-v0-leh" firstAttribute="leading" secondItem="7os-ky-hQ3" secondAttribute="trailing" constant="5" id="dgK-hF-XEq"/>
                                     <constraint firstAttribute="trailing" secondItem="atb-Xu-Wuj" secondAttribute="trailing" constant="10" id="jex-Ba-ZvL"/>
-                                    <constraint firstItem="7os-ky-hQ3" firstAttribute="top" secondItem="ijJ-sO-R4a" secondAttribute="bottom" constant="5" id="l2b-zv-dL6"/>
+                                    <constraint firstItem="7os-ky-hQ3" firstAttribute="top" secondItem="ijJ-sO-R4a" secondAttribute="bottom" constant="10" id="l2b-zv-dL6"/>
                                     <constraint firstAttribute="trailing" secondItem="ngm-TQ-5dL" secondAttribute="trailing" constant="10" id="mdv-tL-E4c"/>
-                                    <constraint firstItem="atb-Xu-Wuj" firstAttribute="top" secondItem="1ck-z6-L9z" secondAttribute="top" constant="20" id="q4b-h4-eWh"/>
                                     <constraint firstItem="ijJ-sO-R4a" firstAttribute="top" secondItem="1ck-z6-L9z" secondAttribute="top" constant="20" id="sfi-3M-aoX"/>
                                     <constraint firstItem="dKY-fy-GRv" firstAttribute="centerX" secondItem="1ck-z6-L9z" secondAttribute="centerX" id="va1-sD-LSJ"/>
                                     <constraint firstItem="o36-pi-iw0" firstAttribute="top" secondItem="SH2-u4-Srw" secondAttribute="bottom" constant="10" id="xFB-ZD-rGO"/>
@@ -233,7 +259,7 @@
         <!--Home main-->
         <scene sceneID="xJl-eg-16W">
             <objects>
-                <viewController storyboardIdentifier="Home" id="mVt-ww-GTN" customClass="Home_main" customModule="速递医疗_医生端" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Home" id="mVt-ww-GTN" customClass="Home_main" customModule="DoctorClient" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4A6-Ut-cg0"/>
                         <viewControllerLayoutGuide type="bottom" id="EKr-bJ-0iT"/>
@@ -246,7 +272,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0gM-OF-91f">
-                                        <rect key="frame" x="280" y="10.5" width="30" height="44"/>
+                                        <rect key="frame" x="280" y="15.5" width="30" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="V2H-PM-bZt"/>
                                             <constraint firstAttribute="width" constant="30" id="fnG-uQ-0c9"/>
@@ -294,13 +320,13 @@
                                     <color key="titleColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zDb-iZ-hvc" customClass="BaseTableView" customModule="速递医疗_医生端" customModuleProvider="target">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zDb-iZ-hvc" customClass="BaseTableView" customModule="DoctorClient" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="99" width="320" height="469"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="scrollIndicatorInsets" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
                                 <color key="separatorColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="reusedCell" rowHeight="100" id="wcx-wZ-g2d" customClass="HomeMainTableViewCell" customModule="速递医疗_医生端" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="reusedCell" rowHeight="100" id="wcx-wZ-g2d" customClass="HomeMainTableViewCell" customModule="DoctorClient" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="320" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wcx-wZ-g2d" id="z2o-Fi-Jbe">
@@ -380,7 +406,7 @@
                                             <outlet property="pixImageView" destination="CqQ-bM-Uat" id="x1G-BH-5t4"/>
                                             <outlet property="sexLabel" destination="tSO-S1-iJh" id="QYh-Ie-Zh5"/>
                                             <outlet property="timeLabel" destination="BYU-X8-Nba" id="HGz-Ix-Xh8"/>
-                                            <segue destination="dEe-b0-evy" kind="presentation" identifier="ShowDetail" animates="NO" modalPresentationStyle="fullScreen" modalTransitionStyle="partialCurl" id="2GB-sf-9Pl"/>
+                                            <segue destination="dEe-b0-evy" kind="show" identifier="ShowDetail" animates="NO" id="2GB-sf-9Pl"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -443,6 +469,6 @@
     </scenes>
     <resources>
         <image name="back" width="10" height="15"/>
-        <image name="message" width="30" height="30"/>
+        <image name="message" width="20" height="20"/>
     </resources>
 </document>
